--- a/index.html
+++ b/index.html
@@ -88,32 +88,35 @@
       <span class="navbar-brand mb-0 h1">PROJECT LOG</span>
     </nav>
     <div class="container-fluid">
-      <div class="section1 row my-2">
+      <div class="row p-2 section1 my-2">
         <div id="section1" data-toggle="tooltip" data-placement="bottom" title="CLICK TO COPY THE CODE"></div>
       </div>
-      <div class="row p-2 mr-3 float-left">
-        <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
-      </div>
-      <div class="row p-2 mr-3 float-left">
-        <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE"></div>
-      </div>
-      <div class="row p-2 mr-3 float-left">
-        <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND"></div>
-      </div>
-      <div class="row p-2 mr-3 float-left">
-        <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970"></div>
-      </div>
-      <div class="row p-2 mr-3 float-left">
-        <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()"></div>
-      </div>
-      <div class="row p-2 mr-3 float-left">
-        <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip the Coin" onclick="flipCoin()"></div>
-      </div>
-      <div class="row p-2 mr-3 float-left">
-        <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
-      </div>
-      <div class="row p-2 mr-3 float-left">
-        <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
+      <div class="row pb-5 mb-5">
+        <div class="p-2 mr-3 float-left">
+          <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
+        </div>
+        <div class="p-2 mr-3 float-left">
+          <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE"></div>
+        </div>
+        <div class="p-2 mr-3 float-left">
+          <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND"></div>
+        </div>
+        <div class="p-2 mr-3 float-left">
+          <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970"></div>
+        </div>
+        <div class="p-2 mr-3 float-left">
+          <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()"></div>
+        </div>
+        <div class="p-2 mr-3 float-left">
+          <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip the Coin" onclick="flipCoin()"></div>
+        </div>
+        <div class="p-2 mr-3 float-left">
+          <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
+        </div>
+        <div class="p-2 mr-3 float-left">
+          <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
+        </div>
+        <div class="p-2 mr-3 float-left btn-group" id="section10"></div>
       </div>
     </div>
     <!-- End of main container -->
@@ -127,7 +130,8 @@
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment.js"></script>
-    <script src="assets/js/main-min.js"></script>
+    <script src="assets/js/rps.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 
   <!--#
