--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="row p-2 section1 my-2">
         <div id="section1" data-toggle="tooltip" data-placement="bottom" title="CLICK TO COPY THE CODE"></div>
       </div>
-      <div class="row pb-5 mb-5">
+      <div class="row p-2 pb-5 mb-5">
         <div class="p-2 mr-3 float-left">
           <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
         </div>
@@ -108,13 +108,13 @@
           <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()"></div>
         </div>
         <div class="p-2 mr-3 float-left">
-          <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip the Coin" onclick="flipCoin()"></div>
+          <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
         </div>
         <div class="p-2 mr-3 float-left">
           <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
         </div>
         <div class="p-2 mr-3 float-left">
-          <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
+          <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip the Coin" onclick="flipCoin()"></div>
         </div>
         <div class="p-2 mr-3 float-left btn-group" id="section10"></div>
       </div>
@@ -131,7 +131,7 @@
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment.js"></script>
     <script src="assets/js/rps.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main-min.js"></script>
   </body>
 
   <!--#
