change with min

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment.js"></script>
     <script src="assets/js/rps.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main-min.js"></script>
   </body>
 
   <!--#
