--- a/index.html
+++ b/index.html
@@ -92,32 +92,46 @@
         <div id="section1" data-toggle="tooltip" data-placement="bottom" title="CLICK TO COPY THE CODE"></div>
       </div>
       <div class="row p-2 pb-5 mb-5">
-        <div class="p-2 mr-3 float-left">
-          <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
-        </div>
-        <div class="p-2 mr-3 float-left">
-          <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE"></div>
-        </div>
-        <div class="p-2 mr-3 float-left">
-          <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND"></div>
-        </div>
-        <div class="p-2 mr-3 float-left">
-          <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970"></div>
-        </div>
-        <div class="p-2 mr-3 float-left">
-          <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()"></div>
-        </div>
-        <div class="p-2 mr-3 float-left">
-          <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
-        </div>
-        <div class="p-2 mr-3 float-left">
-          <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
-        </div>
-        <div class="p-2 mr-3 float-left">
-          <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip The Coin" onclick="flipCoin()"></div>
-        </div>
-        <div class="p-2 mr-3 float-left">
-          <div class="btn-group" id="section10" data-toggle="tooltip" data-placement="bottom" title="Green is Win, Red is Dead, Blue is Glue"></div>
+        <div class="col">
+          <div class="container-FLUID">
+            <div class="row">
+              <div class="col-4">
+                <div class="p-2">
+                  <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
+                </div>
+                <div class="p-2">
+                  <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE"></div>
+                </div>
+                <div class="p-2">
+                  <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND"></div>
+                </div>
+                <div class="p-2">
+                  <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970"></div>
+                </div>
+              </div>
+
+              <div class="col-4">
+                <div class="p-2">
+                  <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()"></div>
+                </div>
+                <div class="p-2">
+                  <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
+                </div>
+              </div>
+
+              <div class="col-4">
+                <div class="p-2">
+                  <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
+                </div>
+                <div class="p-2">
+                  <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip The Coin" onclick="flipCoin()"></div>
+                </div>
+                <div class="p-2">
+                  <div class="btn-group w-100" id="section10" data-toggle="tooltip" data-placement="bottom" title="Green is Win, Red is Dead, Blue is Glue"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
