--- a/index.html
+++ b/index.html
@@ -93,41 +93,46 @@
       </div>
       <div class="row p-2 pb-5 mb-5">
         <div class="col">
-          <div class="container-FLUID">
+          <div class="container-FLUID p-2">
             <div class="row">
-              <div class="col-4">
-                <div class="p-2">
+              <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
+                <div class="p-2 w-100">
                   <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
                 </div>
-                <div class="p-2">
+                <div class="p-2 w-100">
                   <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE"></div>
                 </div>
-                <div class="p-2">
+                <div class="p-2 w-100">
                   <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND"></div>
                 </div>
-                <div class="p-2">
+                <div class="p-2 w-100">
                   <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970"></div>
                 </div>
               </div>
 
-              <div class="col-4">
-                <div class="p-2">
-                  <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()"></div>
+              <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
+                <div class="p-2 w-100">
+                  <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip The Coin" onclick="flipCoin()"></div>
                 </div>
-                <div class="p-2">
-                  <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
+                <div class="p-2 w-100">
+                  <div class="btn-group w-100" id="section10" data-toggle="tooltip" data-placement="bottom" title="Green is Win, Red is Dead, Blue is Glue"></div>
+                </div>
+                <div class="p-2 w-100">
+                  <input class="w-100 invisible d-none mb-2 text-center inputQR" id="qrInput" placeholder="Insert a URL or TEXT" />
+                  <div id="section11" data-toggle="tooltip" data-placement="bottom" title="Generate QR-CODE" onclick="generateQR()"></div>
+                  <div id="showQR" class="invisible d-none w-100 bg-white copyable"></div>
                 </div>
               </div>
 
-              <div class="col-4">
-                <div class="p-2">
+              <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
+                <div class="p-2 w-100">
+                  <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()"></div>
+                </div>
+                <div class="p-2 w-100">
+                  <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
+                </div>
+                <div class="p-2 w-100">
                   <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
-                </div>
-                <div class="p-2">
-                  <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip The Coin" onclick="flipCoin()"></div>
-                </div>
-                <div class="p-2">
-                  <div class="btn-group w-100" id="section10" data-toggle="tooltip" data-placement="bottom" title="Green is Win, Red is Dead, Blue is Glue"></div>
                 </div>
               </div>
             </div>
@@ -146,7 +151,7 @@
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment.js"></script>
-    <script src="assets/js/main-min.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 
   <!--#
