css order for column changed

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
               </div>
 
-              <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
+              <div class="col-12 col-md-6 col-lg-4 order-12 order-md-1" style="min-width: 330px">
                 <div class="p-2 w-100">
                   <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip The Coin" onclick="flipCoin()"></div>
                 </div>
@@ -124,7 +124,7 @@
                 </div>
               </div>
 
-              <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
+              <div class="col-12 col-md-6 col-lg-4 order-6 order-md-2" style="min-width: 330px">
                 <div class="p-2 w-100">
                   <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()"></div>
                 </div>
