Button border added, SASS moved into asset

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/scss/main-min.css" />
   </head>
 
   <body id="app">
