--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/scss/main-min.css" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MX8ZTS1SBV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-MX8ZTS1SBV");
+    </script>
   </head>
 
   <body id="app">
