Download text to TXT file added

--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                   <div id="section11" data-toggle="tooltip" data-placement="bottom" title="Generate QR-CODE" onclick="generateQR()"></div>
                   <div id="showQR" class="invisible d-none w-100 bg-white copyable"></div>
                 </div>
+                <div class="p-2 w-100">
+                  <textarea class="w-100 invisible d-none mb-2 inputTxt" id="txtInput" placeholder="Insert a TEXT" rows="4" cols="50" ></textarea>
+                  <div id="section12" data-toggle="tooltip" data-placement="bottom" title="Download Text" onclick="downloadTxt()"></div>
+                </div>
               </div>
 
               <div class="col-12 col-md-6 col-lg-4 order-6 order-md-2" style="min-width: 330px">
@@ -163,7 +167,7 @@
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main-min.js"></script>
   </body>
 
   <!--#
