--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <script src="assets/js/jQuery.js"></script>
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
-    <script src="assets/js/moment.js"></script>
+    <script src="assets/js/moment-min.js"></script>
     <script src="assets/js/main-min.js"></script>
   </body>
 
