--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment-min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main-min.js"></script>
   </body>
 
   <!--#
