--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <div class="btn-group w-100" id="section10" data-toggle="tooltip" data-placement="bottom" title="Green is Win, Red is Dead, Blue is Glue"></div>
                 </div>
                 <div class="p-2 w-100">
-                  <div class="btn-group w-100" id="section13" data-toggle="tooltip" data-placement="bottom" title="Coming Soon"></div>
+                  <div id="section13" data-toggle="tooltip" data-placement="bottom" title="Coming Soon"></div>
                 </div>
               </div>
 
