few functionality added and updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
     ║║  ║║  HTTPS://DESAIGN.APP ║║     ║║     ╙╙ LLC
     ╙╙──╜╜  SINCE TWENTY ELEVEN ╙╙─ ───╜╜
-            Copyright © 2022
+            Copyright © 2023
             ALL RIGHTS RESERVED
             --
             Call: 1-860-DESAIGN
@@ -162,6 +162,9 @@
                 <div class="p-2 w-100">
                   <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
                 </div>
+                <div class="p-2 w-100">
+                  <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
+                </div>
               </div>
               
               <div class="col-12 col-md-6 col-lg-4 order-6 order-md-2" style="min-width: 330px">
@@ -175,7 +178,7 @@
                   <div id="section12" data-toggle="tooltip" data-placement="bottom" title="Download Text" onclick="downloadTxt()"></div>
                 </div>
                 <div class="p-2 w-100">
-                  <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
+                  <div id="section14" data-toggle="tooltip" data-placement="bottom" title="Record PLOG" onclick="recordPlog()"></div>
                 </div>
               </div>
             </div>
@@ -208,7 +211,7 @@
     ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
     ║║  ║║  HTTPS://DESAIGN.APP ║║     ║║     ╙╙ LLC
     ╙╙──╜╜  SINCE TWENTY ELEVEN ╙╙─ ───╜╜
-            Copyright © 2022
+            Copyright © 2023
             ALL RIGHTS RESERVED
             --
             Call: 1-860-DESAIGN
