html bottom pop up section added

--- a/index.html
+++ b/index.html
@@ -278,6 +278,10 @@
       </div>
     </div>
     <!-- End of main container -->
+    <div id="bottomPopup">
+      <span id="closeButton"><span id="closeIcon">&#10006;</span></span>
+      <p><span id="messagePopUp">&nbsp;</span></p>
+    </div>
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
       <a class="navbar-brand" href="https://desaign.app">POWERED BY <span class="text-warning">DESAIGN.STUDIO</span></a>
     </nav>
