--- a/countdown.html
+++ b/countdown.html
@@ -38,6 +38,18 @@
         }
         return 1;
       }
+      function hoursInCurrentDate(year, month, date) {
+        if (year === new Date().getFullYear() && month === new Date().getMonth() + 1 && date === new Date().getDate()) {
+            return new Date().getHours();
+        }
+        return 0;
+      }
+      function minutesInCurrentHour(year, month, date, hour) {
+        if (year === new Date().getFullYear() && month === new Date().getMonth() + 1 && date === new Date().getDate() && hour === new Date().getHours()) {
+            return new Date().getMinutes();
+        }
+        return 0;
+      }
 
       // The data/time we want to countdown to
       var yearNumber, monthNumber, dateNumber, hourNumber, minuteNumber;
@@ -54,11 +66,15 @@
         dateNumber = parseInt(prompt("Day?", new Date().getDate()));
       } while (isNaN(dateNumber) || dateNumber < daysInCurrentMonth(yearNumber, monthNumber) || dateNumber > daysInMonth(monthNumber - 1, yearNumber));
       // hours
-
+      do {
+        hourNumber = parseInt(prompt("Hour?", new Date().getHours()));
+      } while (isNaN(hourNumber) || hourNumber < hoursInCurrentDate(yearNumber, monthNumber, dateNumber) || hourNumber > 23);
       // minutes
-
+      do {
+        minuteNumber = parseInt(prompt("Minute?", new Date().getMinutes()));
+      } while (isNaN(minuteNumber) || minuteNumber < minutesInCurrentHour(yearNumber, monthNumber, dateNumber, hourNumber) || minuteNumber > 59);
       //   countdown date
-      var countDownDate = new Date(`${monthNumber} ${dateNumber}, ${yearNumber} 23:38:00`).getTime();
+      var countDownDate = new Date(`${monthNumber} ${dateNumber}, ${yearNumber} ${hourNumber}:${minuteNumber}:00`).getTime();
 
       // Run myfunc every second
       var myfunc = setInterval(function () {
@@ -72,10 +88,10 @@
         var seconds = Math.floor((timeleft % (1000 * 60)) / 1000);
 
         // Result is output to the specific element
-        document.getElementById("days").innerHTML = days + "d ";
-        document.getElementById("hours").innerHTML = hours + "h ";
-        document.getElementById("mins").innerHTML = minutes + "m ";
-        document.getElementById("secs").innerHTML = seconds + "s ";
+        days != 0 ? document.getElementById("days").innerHTML = days + " days : " : document.getElementById("days").hidden;
+        hours != 0 ? document.getElementById("hours").innerHTML = hours + " hours : " : document.getElementById("hours").hidden;
+        minutes != 0 ? document.getElementById("mins").innerHTML = minutes + " minutes : " : document.getElementById("minutes").hidden;
+        document.getElementById("secs").innerHTML = seconds + " seconds";
 
         // Display the message when countdown is over
         if (timeleft < 0) {
