lorem ipsum layout and trigger updated

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <!-- Lorem Ipsum -->
               <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
                 <div class="p-2 w-100">
-                  <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
+                  <div class="btn-group w-100" id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum or Random Paragraph Text"></div>
                 </div>
               </div>
 
