--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
               <!-- Rock Paper Scissor -->
               <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
                 <div class="p-2 w-100">
-                  <div class="btn-group w-100" id="section10" data-toggle="tooltip" data-placement="bottom" title="Green is Win, Red is Dead, Blue is Glue"></div>
+                  <div id="showScore" class="w-100 text-center bg-dark text-light">Result!</div>
+                  <div class="btn-group w-100" id="section10" data-toggle="tooltip" data-placement="bottom" title="Green you Win, Red you Dead, Blue you Glue"></div>
                 </div>
               </div>
 
