--- a/index.html
+++ b/index.html
@@ -314,9 +314,11 @@
     </div>
     <!-- Footer -->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
-      <a class="navbar-brand" href="https://desaign.app"
-        >POWERED BY <span class="text-warning">THREE CUBES ORG</span> <span class="supsub"><sup>A SECTOR OF</sup><sub>DESAIGN STUDIO</sub></span></a
-      >
+      <div id="box">
+        <span style="color: lightslategray">POWERED BY </span>THREE CUBES &#160;&#160;
+        <div><p>ORG</p></div>
+        <span class="supsub"><sup>A SECTOR OF</sup><sub><a href="https:desaignstudio.com" target="_blank" rel="noopener noreferrer" class="text-light">DESAIGN STUDIO</a></sub></span>
+      </div>
     </nav>
     <!-- Optional JavaScript -->
     <!--     <script src="assets/js/connect.js"></script> -->
