desaign stamp updated

--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
     ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
     ║║  ║║  HTTPS://DESAIGN.APP ║║     ║║     ╙╙ LLC
     ╙╙──╜╜  SINCE TWENTY ELEVEN ╙╙─ ───╜╜
-            Copyright © 2024
-            ALL RIGHTS RESERVED
-            --
-            Call: 1-860-DESAIGN
-            Mail: MEET@DESAIGN.STUDIO
-            Post: PO BOX 200001, AUSTIN TX 78720
-            --
-            Book an appointment with us at
-            https://calendly.com/desaignstudio
-            --
-            Follow us: #desaignstudio
+        Copyright © 2024
+        ALL RIGHTS RESERVED
+        --
+        Call: 1-860-DESAIGN
+        Mail: MEET@DESAIGN.STUDIO
+        Post: PO BOX 200001, AUSTIN TX 78720
+        --
+        Book an appointment with us at
+        https://calendly.com/desaignstudio
+        --
+        Follow us: #desaignstudio
+              --
+              Developer: Kratu Desai
+                        Founder and CEO
+                        SAI@DESAIGN.STUDIO
+                        https://THEGENIUS.ONE
+              --
+              GitHub: @kratuvwxyz
 #-->
 
 <!--[if IE 8]><html class="no-js oldie ie8" lang="en"> <![endif]-->
@@ -367,17 +374,24 @@
     ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
     ║║  ║║  HTTPS://DESAIGN.APP ║║     ║║     ╙╙ LLC
     ╙╙──╜╜  SINCE TWENTY ELEVEN ╙╙─ ───╜╜
-            Copyright © 2023
-            ALL RIGHTS RESERVED
-            --
-            Call: 1-860-DESAIGN
-            Mail: MEET@DESAIGN.STUDIO
-            Post: PO BOX 200001, AUSTIN TX 78720
-            --
-            Book an appointment with us at
-            https://calendly.com/desaignstudio
-            --
-            Follow us: #desaignstudio
+        Copyright © 2024
+        ALL RIGHTS RESERVED
+        --
+        Call: 1-860-DESAIGN
+        Mail: MEET@DESAIGN.STUDIO
+        Post: PO BOX 200001, AUSTIN TX 78720
+        --
+        Book an appointment with us at
+        https://calendly.com/desaignstudio
+        --
+        Follow us: #desaignstudio
+              --
+              Developer: Kratu Desai
+                        Founder and CEO
+                        SAI@DESAIGN.STUDIO
+                        https://THEGENIUS.ONE
+              --
+              GitHub: @kratuvwxyz
 #-->
 
 </html>
