Main js issue resolved

--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/js/qrCode.js"></script>
     <script src="assets/js/jQuery.js"></script>
-    <script src="assets/js/popper.js"></script>
+    <!-- <script src="assets/js/popper.js"></script> -->
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment-min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main-min.js"></script>
   </body>
 
   <!--#
