--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <body id="app">
     <audio id="audio" src="./assets/music/coin.wav"></audio>
     <nav class="navbar navbar-light bg-light">
-      <span class="navbar-brand mb-0 h1">PROJECT LOG</span>
+      <span class="navbar-brand mb-0 h1">DASHBOARD 3.0</span>
     </nav>
 
     <section>
