Popper JS added to remove Bootstrap error

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <meta name="twitter:image" content="https://desaign.app/clients/cli/images/1x/black.png" />
 
     <!-- Security Best Practices -->
-    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' https://desaign.app; font-src 'self' https://fonts.gstatic.com;" />
+    <!-- <meta http-equiv="X-Content-Type-Options" content="nosniff" /> -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' https://desaign.app; font-src 'self' https://fonts.gstatic.com;" /> -->
 
     <title>PLOG | Desaign Studio</title>
 
@@ -336,6 +336,7 @@
     </nav>
     <!-- JavaScript -->
     <script src="assets/js/jQuery.js"></script>
+    <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/qrCode.js"></script>
     <script src="assets/js/moment-min.js"></script>
