--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
   </head>
 
   <body id="app">
-    <!-- audio files -->
+    <!-- Audio Files -->
     <audio id="audio" src="./assets/music/coin.wav"></audio>
-    <!-- nav -->
+    <!-- Nav Bar -->
     <nav class="navbar navbar-light bg-light">
       <span class="navbar-brand mb-0 h1">DASHBOARD 3.0</span>
     </nav>
@@ -151,14 +151,14 @@
                     <!-- Password Creator -->
                     <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
                       <div class="p-2 w-100">
-                        <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Password Creator" onclick="oneMinute()"></div>
+                        <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Password Creator" onclick="oneMinutePassword()"></div>
                       </div>
                     </div>
 
                     <!-- Random Word Creator -->
                     <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
                       <div class="p-2 w-100">
-                        <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Random 4 Words Creator" onclick="oneMinute()"></div>
+                        <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Random 4 Words Creator" onclick="oneMinuteWords()"></div>
                       </div>
                     </div>
 
@@ -206,7 +206,7 @@
                     <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
                       <div class="p-2 w-100">
                         <textarea class="w-100 invisible d-none mb-2 inputTxt" id="txtInput" placeholder="Insert a TEXT" rows="4" cols="50"></textarea>
-                        <div id="section12" data-toggle="tooltip" data-placement="bottom" title="Download Text" onclick="downloadTxt()"></div>
+                        <div id="section12" data-toggle="tooltip" data-placement="bottom" title="Download Text" class="downText" onclick="downloadTxt()"></div>
                       </div>
                     </div>
 
@@ -341,6 +341,89 @@
     <script src="assets/js/qrCode.js"></script>
     <script src="assets/js/moment-min.js"></script>
     <script src="assets/js/main-min.js"></script>
+    <!-- Console Signature -->
+    <script>
+      console.log(`       
+    ╥╥  DESIGNED AND DEVELOPED BY...
+    ║║ 
+    ║║ ╓╓──╖╖ ╓╓──── ────╖╖ ╓╖ ╓╓──╖╖ ╓╓──╖╖ TM
+    ║║ ║║  ║║ ║║         ║║ ╙╜ ║║  ║║ ║║  ║║
+╓╓──╫╫ ╫╫──╜╜ ╙╙──╖╖ ╓╓──╫╫ ╖╖ ║║  ║║ ║║  ║║
+║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
+║║  ║║  ┍━╸╺┯╸╷ ╷┎─╮ ┰ ╭─╮  ║║     ║║     ╙╙ LLC
+╙╙──╜╜  ┕━┑ │ │ │┃ │ ┃ │ │  ╙╙─ ───╜╜
+        ╺━┙ ╵ ╰─╯┖─╯ ┸ ╰─╯
+        Copyright © 2011-2025
+        ALL RIGHTS RESERVED
+        ---
+        Site: http://DESAIGN.STUDIO
+        Call: 1-860-DESAIGN (337 2446)
+        Mail: MEET@DESAIGN.STUDIO
+        Post: PO BOX 200001, AUSTIN TX 78720
+        ---
+        Book an appointment with us at
+        https://calendly.com/desaignstudio
+        ---
+        Follow us: #desaignstudio
+        ---
+        Kratu Desai (Dreamer-in-Chief)
+        MAIL@THEGENIUS.ONE
+        https://THEGENIUS.ONE
+        
+        https://github.com/kratuvwxyz
+        ---
+        Our Mantra: 
+        Chase Perfection to Catch Excellence.
+
+
+`);
+      console.log("%c     This app is powered by      ", "background:#003355; color:#ffffff; font-size:18px; text-align:center; font-weight:600");
+      console.log("%c   DESAIGN.STUDIO   ", "font-weight: bold; font-size: 30px; color: white; text-shadow: 1px 1px 0 red , 2px 2px 0 orange , 3px 3px 0 yellow , 4px 4px 0 green , 5px 5px 0 lightblue , 6px 6px 0 blue , 7px 7px 0 purple; background-color: black; text-align: center;");
+      console.log("%c  ", "font-size: 72px;");
+    </script>
+    <!-- Loader Wrapper -->
+    <script>
+      if (!localStorage.getItem("hasLoaderRunBefore")) {
+        localStorage.setItem("hasLoaderRunBefore", true);
+        const loaderWrapper = document.createElement("div");
+        loaderWrapper.id = "loader-wrapper";
+        loaderWrapper.style.cssText = `
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: #343a40;
+          z-index: 9999999;
+      `;
+
+        // Add the loader content
+        const loaderContent = document.createElement("object");
+        loaderContent.data = "https://desaign.app/clients/cli/images/logo/mainlogo-rep-7sec.svg";
+        loaderContent.type = "image/svg+xml";
+        loaderContent.style.width = "80%";
+        loaderWrapper.appendChild(loaderContent);
+
+        // Append the loader to the body
+        document.body.prepend(loaderWrapper);
+
+        // Remove the loader after the window loads
+        window.addEventListener("load", () => {
+          setTimeout(() => {
+            loaderWrapper.style.transition = "opacity 0.5s ease";
+            loaderWrapper.style.opacity = "0";
+            setTimeout(() => {
+              loaderWrapper.remove();
+            }, 500);
+          }, 5000); // Delay for 5 seconds
+        });
+      }
+    </script>
   </body>
 
   <!--#
