Move timelog js

--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
     <script src="assets/js/qrCode.js"></script>
     <script src="assets/js/moment-min.js"></script>
     <script src="assets/js/PLOG/common-min.js"></script>
+    <script src="assets/js/PLOG/TIMELOG/timelog-min.js"></script>
     <script src="assets/js/main-min.js"></script>
     <!-- Console Signature -->
     <script src="assets/js/signatureOnLoad.js"></script>
