--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
     <script src="assets/js/PLOG/common-min.js"></script>
     <script src="assets/js/PLOG/TIMELOG/timelog-min.js"></script>
     <script src="assets/js/PLOG/COPYPASTE/passwordgen-min.js"></script>
+    <script src="assets/js/PLOG/COPYPASTE/wordgen-min.js"></script>
     <script src="assets/js/main-min.js"></script>
     <!-- Console Signature -->
     <script src="assets/js/signatureOnLoad.js"></script>
